style.css
body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: flex;
    flex-direction: column;
    margin: -5px;
    }

.section-one {
    display: flex;
    flex-direction: column;
    align-self: center;
    background: #1F2937;
    color: white;
    padding: 0 600px;
    min-width: 900px;
}

.section-one .top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 50px;
}

.section-one .top-left {
    font-size: 24px;
    color: #F9FAF8;
}

.section-one .top ul {
    display: flex;
    list-style: none;
    gap: 30px;
    font-size: 18px;
    color: #E5E7EB;
}

.section-one .bot {
    display: flex;
    margin-bottom: 100px;
    justify-content: space-between;
}

.section-one .bot-left {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: none;
    width: 400px;
}

.section-one .bot-left button{
    background-color: #3882F6;
    font-weight: 700;
    color: white;
    border-radius: 7px;
    border: none;
    width: 100px;
    height: 30px;
    margin: 0;
    padding: 0;
}

.section-one .bot-left h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin-bottom: -25px;
    margin: 0;
    padding: 0;
}

.section-one .bot-right img {
    max-width: 100%;
    height: auto;
    max-height: 250px;
    min-width: 250px;
}

.section-two {
    min-width: 1000px;
}

.section-two img{
    width: 200px;
    height: 150px;
}

.section-two .top {
    display: flex;
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    align-items: center;
    justify-content: center;
    margin: 50px auto;
}

.section-two .bot {
    display: flex;
    padding: 0 200px;
    justify-content: center;
    align-items: center;
    gap: 60px;
}

.section-two .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card p {
    text-align: center;
    margin-top: 8px;
    font-size: 16px;
    color: #474849;
}

.section-three {
    background: #E5E7EB;
    display: flex;
    flex-direction: column;
    padding: 75px 500px;
    gap: 10px;
    margin-top: 50px;
    height: 300px;
    align-self: center;
    justify-content: center;
    min-width: 600px;
}

.section-three .quote {
    font-size: 30px;
    font-weight: lighter;
    font-style: italic;
    color: #1F2937;
}

.section-three .name{
    align-self: flex-end;
    font-weight: bolder;
}

.section-four {
    background-color: #3882F6;
    display: flex;
    padding: 60px 80px;
    margin: 100px 80px;
    color: #F9FAF8;
    border-radius: 10px;
    align-self: center;
    gap: 155px;
    max-width: 1000px;
} 

.section-four button {
    background-color: #3882F6;
    border: solid;
    border-color: white;
    border-radius: 10px;
    padding: 0 35px;
    color: #F9FAF8;
    font-weight: 700;
}

.section-four .header {
    font-size: 20px;
    font-weight: 700;
}

